appId: ${APP_ID}
name: Discussion
onFlowStart:
  - runFlow: '../../helpers/setup.yaml'
onFlowComplete:
  - evalScript: ${output.utils.deleteCreatedUsers()}
tags:
  - test-10

---
- evalScript: ${output.user = output.utils.createUser()}
- evalScript: ${output.room = output.utils.createRandomRoom(output.user.username, output.user.password)}
- evalScript: ${output.discussionFromNewMessage = output.random() + ' Discussion NewMessageView'}
- evalScript: ${output.discussionFromMessageComposer = output.random() + ' Discussion MessageComposer actions'}
- evalScript: ${output.selectUser = 'rocket.cat'}

- runFlow:
    file: '../../helpers/login-with-deeplink.yaml'
    env:
      USERNAME: ${output.user.username}
      PASSWORD: ${output.user.password}

# should create discussion from NewMessageView
- extendedWaitUntil:
    visible:
      id: 'rooms-list-view'
    timeout: 60000
- runFlow:
    file: '../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'rooms-list-view-create-channel'
      IOS_LABEL: 'Create new channel, team, direct message or discussion'
- extendedWaitUntil:
    visible:
      id: 'new-message-view'
    timeout: 60000
- extendedWaitUntil:
    visible:
      id: 'new-message-view-create-discussion'
    timeout: 60000
- tapOn:
    id: 'new-message-view-create-discussion'
- extendedWaitUntil:
    visible:
      id: 'select-users-view'
    timeout: 60000
# Select users in SelectedUsersView
- runFlow:
    file: '../../helpers/tap-search-field.yaml'
    env:
      SEARCH_ID: 'select-users-view-search'
- inputText: ${output.selectUser}
- extendedWaitUntil:
    visible:
      id: 'select-users-view-item-${output.selectUser}'
    timeout: 60000
- tapOn:
    id: 'select-users-view-item-${output.selectUser}'
- extendedWaitUntil:
    visible:
      id: 'selected-user-${output.selectUser}'
    timeout: 60000
- runFlow: '../../helpers/close-search.yaml'
- runFlow:
    file: '../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'selected-users-view-submit'
      IOS_LABEL: 'Next'
- extendedWaitUntil:
    visible:
      id: 'create-discussion-view'
    timeout: 60000
# Select channel and enter discussion name
- tapOn:
    id: 'create-discussion-select-channel'
- extendedWaitUntil:
    visible:
      id: 'action-sheet'
    timeout: 60000
- extendedWaitUntil:
    visible:
      id: 'multi-select-item-${output.room.name}'
    timeout: 60000
- tapOn:
    id: 'multi-select-item-${output.room.name}'
- tapOn:
    id: 'multi-select-discussion-name'
- inputText: ${output.discussionFromNewMessage}
- tapOn:
    id: 'create-discussion-submit'
- extendedWaitUntil:
    visible:
      id: 'room-view'
    timeout: 60000
- runFlow:
    file: '../../helpers/assert-room-title.yaml'
    env:
      ROOM: ${output.discussionFromNewMessage}
- runFlow: '../../helpers/hide-keyboard.yaml'
- runFlow:
    when:
      visible:
        id: 'room-view'
    commands:
      - runFlow: '../../helpers/go-back.yaml'
- extendedWaitUntil:
    visible:
      id: 'rooms-list-view-item-${output.discussionFromNewMessage}'
    timeout: 60000

# should create discussion from MessageComposer Actions
- runFlow:
    file: '../../helpers/navigate-to-room.yaml'
    env:
      ROOM: ${output.room.name}
- extendedWaitUntil:
    visible:
      id: 'message-composer-actions'
    timeout: 60000
- tapOn:
    id: message-composer-actions
- extendedWaitUntil:
    visible:
      id: 'action-sheet'
    timeout: 60000
- assertVisible:
    text: Create discussion
- tapOn:
    text: Create discussion
- extendedWaitUntil:
    visible:
      id: 'create-discussion-view'
    timeout: 60000
- extendedWaitUntil:
    visible:
      text: .*${output.room.name}.*
    timeout: 60000
- tapOn:
    id: multi-select-discussion-name
- inputText: ${output.discussionFromMessageComposer}
- tapOn:
    id: create-discussion-submit
- extendedWaitUntil:
    visible:
      id: 'room-view'
    timeout: 60000
- runFlow:
    file: '../../helpers/assert-room-title.yaml'
    env:
      ROOM: ${output.discussionFromMessageComposer}

# Create Discussion from action sheet
- extendedWaitUntil:
    visible:
      id: 'message-composer'
    timeout: 60000
- runFlow:
    file: '../../helpers/send-message.yaml'
    env:
      message: 'message'
- extendedWaitUntil:
    visible:
      id: 'message-content-message'
    timeout: 60000
- longPressOn:
    id: message-content-message
- extendedWaitUntil:
    visible:
      id: 'action-sheet'
    timeout: 60000
- extendedWaitUntil:
    visible:
      text: 'Start a discussion'
    timeout: 60000
- tapOn:
    text: Start a discussion
- extendedWaitUntil:
    visible:
      id: 'create-discussion-view'
    timeout: 60000
- tapOn:
    id: create-discussion-submit
    retryTapIfNoChange: true
- extendedWaitUntil:
    visible:
      id: 'room-view'
    timeout: 60000
- runFlow:
    file: '../../helpers/assert-room-title.yaml'
    env:
      ROOM: 'message'

# Check RoomActionsView render
- runFlow: '../../helpers/open-room-actions.yaml'

# should have room actions screen
- assertVisible:
    id: room-actions-view

# should have info
- assertVisible:
    id: room-actions-info

# should have members
- assertVisible:
    id: room-actions-members

# should have files
- assertVisible:
    id: room-actions-files

# should have mentions
- assertVisible:
    id: room-actions-mentioned

# should have starred
- assertVisible:
    id: room-actions-starred

# should have share
- assertVisible:
    id: room-actions-share

# should have pinned
- scrollUntilVisible:
    element:
      id: room-actions-pinned

# should not have notifications
- scrollUntilVisible:
    element:
      id: room-actions-notifications

# should not have leave channel
- scrollUntilVisible:
    element:
      id: room-actions-leave-channel

# should navigate to RoomActionView
- scrollUntilVisible:
    element:
      id: room-actions-info
    direction: UP
- tapOn:
    id: room-actions-info
- extendedWaitUntil:
    visible:
      id: 'room-info-view'
    timeout: 60000

# should have edit button
- assertVisible:
    id: room-info-view-edit-button

# should go back to main room
- runFlow: '../../helpers/go-back.yaml'
- extendedWaitUntil:
    visible:
      id: 'room-actions-view'
    timeout: 60000
- runFlow: '../../helpers/go-back.yaml'
- extendedWaitUntil:
    visible:
      id: 'room-view-messages'
    timeout: 60000
- runFlow: '../../helpers/go-back.yaml'
- extendedWaitUntil:
    visible:
      id: 'rooms-list-view'
    timeout: 60000
- runFlow:
    file: '../../helpers/navigate-to-room.yaml'
    env:
      ROOM: ${output.room.name}

# should navigate to DiscussionsView
- runFlow: '../../helpers/open-room-actions.yaml'
- extendedWaitUntil:
    visible:
      id: 'room-actions-discussions'
    timeout: 60000
- tapOn:
    id: 'room-actions-discussions'
- extendedWaitUntil:
    visible:
      id: 'discussions-view'
    timeout: 60000

# should navigate to discussion
- extendedWaitUntil:
    visible:
      id: 'discussions-view-${output.discussionFromNewMessage}'
    timeout: 60000
- tapOn:
    id: 'discussions-view-${output.discussionFromNewMessage}'
- runFlow:
    file: '../../helpers/assert-room-title.yaml'
    env:
      ROOM: ${output.discussionFromNewMessage}
